fixed a formatting qurik that bothered me - name and email weren't aligned the way i wanted

--- a/src/components/EmployeeCard.css
+++ b/src/components/EmployeeCard.css
@@ -2,5 +2,6 @@
 	background-color: #6d1010;
 	border-radius: 5px;
 	padding: 10px 0;
-	margin: 25px 0;
+	margin-bottom: 20px;
+	color: #a1a1a1;
 }
